tests/ui/codegen/mir/validation/parse_unknown_type.mir
//@compile-flags: --pass none

@module UnknownType

fn @f() -> notatype { //~ ERROR: unknown type `notatype`
  bb0:
    stop
}
